test windows main3